manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aro-azureopenai
  name: aro-azureopenai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aro-azureopenai
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aro-azureopenai
    spec:
      containers:
        - image: quay.io/rcarrata/aro-azureopenai:v1
          name: aro-azureopenai
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          env: # Add this section to pass ConfigMap values as environment variables
            - name: title
              valueFrom:
                configMapKeyRef:
                  name: azureopenai-config
                  key: title
            - name: description
              valueFrom:
                configMapKeyRef:
                  name: azureopenai-config
                  key: description
            - name: port
              valueFrom:
                configMapKeyRef:
                  name: azureopenai-config
                  key: port
            - name: model_name_or_path
              valueFrom:
                configMapKeyRef:
                  name: azureopenai-config
                  key: model_name_or_path
