manifests/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: azureopenai-aro
  name: azureopenai-aro-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: azureopenai-aro
  sessionAffinity: None
  type: ClusterIP
